force-app/main/default/objects/rh2__PS_Settings__c/fields/rh2__Data_Load_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>rh2__Data_Load_Batch_Size__c</fullName>
    <defaultValue>200</defaultValue>
    <inlineHelpText>The number of records per batch when a data load is performed in the environment.  Will not need to be adjusted unless the value is below 200.</inlineHelpText>
    <label>Data Load Batch Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>